--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,2 @@
-<div class="container">
-  <div class="game-container">
-    <div class="game-container__first-row">
-      <div class="hole hole-1"></div>
-      <div class="hole hole-2"></div>
-      <div class="hole hole-3"></div>
-    </div>
-    <div class="game-container__second-row">
-      <div class="hole hole-4"></div>
-      <div class="hole hole-5"></div>
-      <div class="hole hole-6"></div>
-    </div>
-
-    
-  </div>
-</div>
+<button (click)="start()">Start</button>
+<app-board></app-board>
