--- a/src/app/game/whack/board/board.component.scss
+++ b/src/app/game/whack/board/board.component.scss
@@ -1,6 +1,14 @@
-.container{
+.board{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     width: 100%;
     height: 100vh;
+    gap: 30px;
+}
+.container{
+
     position: relative;
     display: flex;
     justify-content: center;
